# universal-parsing

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/: BencodeParser.h  DefaultParser.h  Encode.h  Exceptions.h  JsonParser.h  MethodExistenceCheck.h  SArray.h  SBoolean.h  SDict.h  SDouble.h  SInt.h  SObj.h  SString.h  Serializer.h  Types.h  bencode.h  exception.h  move_wrapper.h
src/: BencodeParser.cpp  DefaultParser.cpp  GetRouteParser.cpp  JsonParser.cpp  SArray.cpp  SBoolean.cpp  SDict.cpp  SDouble.cpp  SInt.cpp  SObj.cpp  SString.cpp
tests/: BencodeParserTest.cpp  CMakeLists.txt  JsonParserTest.cpp  SObjTest.cpp
