if(BUILD_TESTS)
    enable_testing()
    cmake_minimum_required(VERSION 2.6)
    project(tests)
    find_library(gtest REQUIRED)
    add_executable(tests_run SObjTest.cpp BencodeParserTest.cpp JsonParserTest.cpp)
    target_link_libraries(tests_run gtest gtest_main universal-parser)
    add_test(tests_run tests_run)
endif()
